# command_line_rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/catr/: mod.rs  run.rs
src/echor/: mod.rs  run.rs
src/hello/: mod.rs
tests/: cli.rs  mk-outs.sh
