[package]
name = "command_line_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = [] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "2.1.5"
rand = "0.8.5"
